--- a/css/main.css
+++ b/css/main.css
@@ -7,5 +7,32 @@
     color: white;
     text-align: center;
     padding: 10px;
-    font-size: 0.5rem;
+    font-size: 0.9rem;
+}
+.col-sm-4 {
+    flex: 0 0 400px; /* Set a fixed width for the columns */
+}
+
+/* Center the columns horizontally */
+.row {
+    justify-content: center;
+}
+/* main.css */
+
+.card-custom {
+    border: 2px solid #343a40; /* Border color and thickness */
+    border-radius: 10px; /* Border radius for rounded corners */
+    margin-bottom: 20px; /* Margin to separate cards */
+}
+/* Add this CSS to set a smaller width for the About Me section */
+.about-me-text {
+    max-width: 600px; /* Adjust the value as needed */
+    margin: 0 auto;   /* Center the content */
+    margin-left: 80px;
+}
+
+/* Optional: Adjust the image width for better alignment */
+.img-fluid {
+    max-width: 100%;   /* Make sure the image does not exceed its container */
+    height: auto;      /* Maintain aspect ratio */
 }
